--- a/pdfsignature/Base.lproj/LaunchScreen.storyboard
+++ b/pdfsignature/Base.lproj/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23094" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22684"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23084"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -24,12 +24,30 @@
                                     <constraint firstAttribute="height" constant="240" id="V4S-2Q-8aY"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QuickFIll PDF" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uGb-cF-huP">
+                                <rect key="frame" x="146" y="578.66666666666663" width="101" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- It embeds images on PDF" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eKH-kN-uqA">
+                                <rect key="frame" x="93" y="607.66666666666663" width="207" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="uGb-cF-huP" firstAttribute="top" secondItem="uu8-ig-quV" secondAttribute="bottom" constant="20" id="ICk-rh-Eup"/>
                             <constraint firstItem="uu8-ig-quV" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="N3l-80-ehe"/>
+                            <constraint firstItem="eKH-kN-uqA" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="bh4-Wi-p1N"/>
+                            <constraint firstItem="uGb-cF-huP" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.256997" id="eS8-na-sI1"/>
+                            <constraint firstItem="uGb-cF-huP" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="0.0246479" id="khi-1H-Fj1"/>
                             <constraint firstItem="uu8-ig-quV" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="wXo-re-5Ms"/>
+                            <constraint firstItem="eKH-kN-uqA" firstAttribute="top" secondItem="uGb-cF-huP" secondAttribute="bottom" constant="8" id="xDl-Q1-jr3"/>
+                            <constraint firstItem="uGb-cF-huP" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="yE9-th-Y6d"/>
                         </constraints>
                     </view>
                 </viewController>
