--- a/pdfsignature/Base.lproj/LaunchScreen.storyboard
+++ b/pdfsignature/Base.lproj/LaunchScreen.storyboard
@@ -25,7 +25,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QuickFIll PDF" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uGb-cF-huP">
-                                <rect key="frame" x="146" y="578.66666666666663" width="101" height="21"/>
+                                <rect key="frame" x="98.333333333333329" y="578.66666666666663" width="196.33333333333337" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -43,7 +43,7 @@
                             <constraint firstItem="uGb-cF-huP" firstAttribute="top" secondItem="uu8-ig-quV" secondAttribute="bottom" constant="20" id="ICk-rh-Eup"/>
                             <constraint firstItem="uu8-ig-quV" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="N3l-80-ehe"/>
                             <constraint firstItem="eKH-kN-uqA" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="bh4-Wi-p1N"/>
-                            <constraint firstItem="uGb-cF-huP" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.256997" id="eS8-na-sI1"/>
+                            <constraint firstItem="uGb-cF-huP" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="0.5" id="eS8-na-sI1"/>
                             <constraint firstItem="uGb-cF-huP" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" multiplier="0.0246479" id="khi-1H-Fj1"/>
                             <constraint firstItem="uu8-ig-quV" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="wXo-re-5Ms"/>
                             <constraint firstItem="eKH-kN-uqA" firstAttribute="top" secondItem="uGb-cF-huP" secondAttribute="bottom" constant="8" id="xDl-Q1-jr3"/>
